# edge-cdp

./: .gitignore  LICENSE  README.md  profiles.example.toml  pyproject.toml
src/edge_cdp/: __init__.py  __main__.py  browser.py  capture.py  cli.py  config.py  launcher.py
tests/: test_config.py
