[project]
name = "edge-cdp"
version = "0.1.0"
description = "Unified Microsoft Edge launcher and Playwright CDP helper for multi-profile WSL workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ilia Alshanetsky", email = "ilia@ilia.ws" },
]
keywords = ["edge", "chromium", "cdp", "playwright", "wsl", "browser-automation", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "playwright>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/iliaal/edge-cdp"
Repository = "https://github.com/iliaal/edge-cdp"
Issues = "https://github.com/iliaal/edge-cdp/issues"

[project.scripts]
edge-cdp = "edge_cdp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_cdp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
